Parser/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser/Par.y
-----------------------------------------------------------------------------

state 26 contains 33 reduce/reduce conflicts.

rule 78 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pTerm3 -> Term3                             (1)
	%start_pTerm2 -> Term2                             (2)
	%start_pTerm1 -> Term1                             (3)
	%start_pTerm -> Term                               (4)
	%start_pLetVar -> LetVar                           (5)
	%start_pListLetVar -> ListLetVar                   (6)
	%start_pTup -> Tup                                 (7)
	%start_pListTerm -> ListTerm                       (8)
	%start_pBit -> Bit                                 (9)
	%start_pFunDec -> FunDec                           (10)
	%start_pListFunDec -> ListFunDec                   (11)
	%start_pFunction -> Function                       (12)
	%start_pArg -> Arg                                 (13)
	%start_pListArg -> ListArg                         (14)
	%start_pType2 -> Type2                             (15)
	%start_pType1 -> Type1                             (16)
	%start_pType -> Type                               (17)
	%start_pGate -> Gate                               (18)
	Integer -> L_integ                                 (19)
	FunVar -> L_FunVar                                 (20)
	Var -> L_Var                                       (21)
	GateIdent -> L_GateIdent                           (22)
	Lambda -> L_Lambda                                 (23)
	Program -> ListFunDec                              (24)
	Term3 -> Var                                       (25)
	Term3 -> Bit                                       (26)
	Term3 -> Gate                                      (27)
	Term3 -> Tup                                       (28)
	Term3 -> '*'                                       (29)
	Term3 -> '(' Term ')'                              (30)
	Term2 -> Term2 Term3                               (31)
	Term2 -> Term3                                     (32)
	Term1 -> 'if' Term2 'then' Term 'else' Term        (33)
	Term1 -> 'let' '(' LetVar ',' ListLetVar ')' '=' Term 'in' Term   (34)
	Term1 -> Lambda Var '.' Term                       (35)
	Term1 -> Term2                                     (36)
	Term -> Term1                                      (37)
	LetVar -> Var                                      (38)
	ListLetVar -> LetVar                               (39)
	ListLetVar -> LetVar ',' ListLetVar                (40)
	Tup -> '(' Term ',' ListTerm ')'                   (41)
	ListTerm -> Term                                   (42)
	ListTerm -> Term ',' ListTerm                      (43)
	Bit -> Integer                                     (44)
	FunDec -> FunVar Type Function                     (45)
	ListFunDec ->                                      (46)
	ListFunDec -> FunDec ListFunDec                    (47)
	Function -> Var ListArg '=' Term                   (48)
	Arg -> Var                                         (49)
	ListArg ->                                         (50)
	ListArg -> Arg ListArg                             (51)
	Type2 -> Var                                       (52)
	Type2 -> 'Bit'                                     (53)
	Type2 -> 'QBit'                                    (54)
	Type2 -> 'T'                                       (55)
	Type2 -> '!' Type2                                 (56)
	Type2 -> '(' Type ')'                              (57)
	Type1 -> Type2 '><' Type1                          (58)
	Type1 -> Type2 '-o' Type1                          (59)
	Type1 -> Type2                                     (60)
	Type -> Type1                                      (61)
	Gate -> 'H'                                        (62)
	Gate -> 'X'                                        (63)
	Gate -> 'Y'                                        (64)
	Gate -> 'Z'                                        (65)
	Gate -> 'I'                                        (66)
	Gate -> 'S'                                        (67)
	Gate -> 'T'                                        (68)
	Gate -> 'CNOT'                                     (69)
	Gate -> 'TOFFOLI'                                  (70)
	Gate -> 'SWAP'                                     (71)
	Gate -> 'FREDKIN'                                  (72)
	Gate -> 'QFT'                                      (73)
	Gate -> 'QFTI'                                     (74)
	Gate -> 'CT'                                       (75)
	Gate -> 'CR2'                                      (76)
	Gate -> 'CR2D'                                     (77)
	Gate -> 'CR3'                                      (78)
	Gate -> 'CR3'                                      (79)
	Gate -> 'CR4'                                      (80)
	Gate -> 'CR4D'                                     (81)
	Gate -> 'CR8'                                      (82)
	Gate -> 'CR8D'                                     (83)
	Gate -> GateIdent                                  (84)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'*'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-o'           { PT _ (TS _ 6) }
	'.'            { PT _ (TS _ 7) }
	'='            { PT _ (TS _ 8) }
	'><'           { PT _ (TS _ 9) }
	'Bit'          { PT _ (TS _ 10) }
	'CNOT'         { PT _ (TS _ 11) }
	'CR2'          { PT _ (TS _ 12) }
	'CR2D'         { PT _ (TS _ 13) }
	'CR3'          { PT _ (TS _ 14) }
	'CR4'          { PT _ (TS _ 15) }
	'CR4D'         { PT _ (TS _ 16) }
	'CR8'          { PT _ (TS _ 17) }
	'CR8D'         { PT _ (TS _ 18) }
	'CT'           { PT _ (TS _ 19) }
	'FREDKIN'      { PT _ (TS _ 20) }
	'H'            { PT _ (TS _ 21) }
	'I'            { PT _ (TS _ 22) }
	'QBit'         { PT _ (TS _ 23) }
	'QFT'          { PT _ (TS _ 24) }
	'QFTI'         { PT _ (TS _ 25) }
	'S'            { PT _ (TS _ 26) }
	'SWAP'         { PT _ (TS _ 27) }
	'T'            { PT _ (TS _ 28) }
	'TOFFOLI'      { PT _ (TS _ 29) }
	'X'            { PT _ (TS _ 30) }
	'Y'            { PT _ (TS _ 31) }
	'Z'            { PT _ (TS _ 32) }
	'else'         { PT _ (TS _ 33) }
	'if'           { PT _ (TS _ 34) }
	'in'           { PT _ (TS _ 35) }
	'let'          { PT _ (TS _ 36) }
	'then'         { PT _ (TS _ 37) }
	L_integ        { PT _ (TI $$) }
	L_FunVar       { PT _ (T_FunVar $$) }
	L_Var          { PT _ (T_Var $$) }
	L_GateIdent    { PT _ (T_GateIdent $$) }
	L_Lambda       { PT _ (T_Lambda $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pTerm3   rule  1
	%start_pTerm2   rule  2
	%start_pTerm1   rule  3
	%start_pTerm    rule  4
	%start_pLetVar  rule  5
	%start_pListLetVar rule  6
	%start_pTup     rule  7
	%start_pListTerm rule  8
	%start_pBit     rule  9
	%start_pFunDec  rule  10
	%start_pListFunDec rule  11
	%start_pFunction rule  12
	%start_pArg     rule  13
	%start_pListArg rule  14
	%start_pType2   rule  15
	%start_pType1   rule  16
	%start_pType    rule  17
	%start_pGate    rule  18
	Integer         rule  19
	FunVar          rule  20
	Var             rule  21
	GateIdent       rule  22
	Lambda          rule  23
	Program         rule  24
	Term3           rules 25, 26, 27, 28, 29, 30
	Term2           rules 31, 32
	Term1           rules 33, 34, 35, 36
	Term            rule  37
	LetVar          rule  38
	ListLetVar      rules 39, 40
	Tup             rule  41
	ListTerm        rules 42, 43
	Bit             rule  44
	FunDec          rule  45
	ListFunDec      rules 46, 47
	Function        rule  48
	Arg             rule  49
	ListArg         rules 50, 51
	Type2           rules 52, 53, 54, 55, 56, 57
	Type1           rules 58, 59, 60
	Type            rule  61
	Gate            rules 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	L_FunVar       shift, and enter state 66
	%eof           reduce using rule 46

	FunVar         goto state 63
	Program        goto state 95
	FunDec         goto state 64
	ListFunDec     goto state 96

State 1

	%start_pTerm3 -> . Term3                            (rule 1)

	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'CNOT'         shift, and enter state 23
	'CR2'          shift, and enter state 24
	'CR2D'         shift, and enter state 25
	'CR3'          shift, and enter state 26
	'CR4'          shift, and enter state 27
	'CR4D'         shift, and enter state 28
	'CR8'          shift, and enter state 29
	'CR8D'         shift, and enter state 30
	'CT'           shift, and enter state 31
	'FREDKIN'      shift, and enter state 32
	'H'            shift, and enter state 33
	'I'            shift, and enter state 34
	'QFT'          shift, and enter state 35
	'QFTI'         shift, and enter state 36
	'S'            shift, and enter state 37
	'SWAP'         shift, and enter state 38
	'T'            shift, and enter state 39
	'TOFFOLI'      shift, and enter state 40
	'X'            shift, and enter state 41
	'Y'            shift, and enter state 42
	'Z'            shift, and enter state 43
	L_integ        shift, and enter state 20
	L_Var          shift, and enter state 54
	L_GateIdent    shift, and enter state 44

	Integer        goto state 68
	Var            goto state 70
	GateIdent      goto state 21
	Term3          goto state 94
	Tup            goto state 76
	Bit            goto state 78
	Gate           goto state 79

State 2

	%start_pTerm2 -> . Term2                            (rule 2)

	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'CNOT'         shift, and enter state 23
	'CR2'          shift, and enter state 24
	'CR2D'         shift, and enter state 25
	'CR3'          shift, and enter state 26
	'CR4'          shift, and enter state 27
	'CR4D'         shift, and enter state 28
	'CR8'          shift, and enter state 29
	'CR8D'         shift, and enter state 30
	'CT'           shift, and enter state 31
	'FREDKIN'      shift, and enter state 32
	'H'            shift, and enter state 33
	'I'            shift, and enter state 34
	'QFT'          shift, and enter state 35
	'QFTI'         shift, and enter state 36
	'S'            shift, and enter state 37
	'SWAP'         shift, and enter state 38
	'T'            shift, and enter state 39
	'TOFFOLI'      shift, and enter state 40
	'X'            shift, and enter state 41
	'Y'            shift, and enter state 42
	'Z'            shift, and enter state 43
	L_integ        shift, and enter state 20
	L_Var          shift, and enter state 54
	L_GateIdent    shift, and enter state 44

	Integer        goto state 68
	Var            goto state 70
	GateIdent      goto state 21
	Term3          goto state 72
	Term2          goto state 93
	Tup            goto state 76
	Bit            goto state 78
	Gate           goto state 79

State 3

	%start_pTerm1 -> . Term1                            (rule 3)

	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'CNOT'         shift, and enter state 23
	'CR2'          shift, and enter state 24
	'CR2D'         shift, and enter state 25
	'CR3'          shift, and enter state 26
	'CR4'          shift, and enter state 27
	'CR4D'         shift, and enter state 28
	'CR8'          shift, and enter state 29
	'CR8D'         shift, and enter state 30
	'CT'           shift, and enter state 31
	'FREDKIN'      shift, and enter state 32
	'H'            shift, and enter state 33
	'I'            shift, and enter state 34
	'QFT'          shift, and enter state 35
	'QFTI'         shift, and enter state 36
	'S'            shift, and enter state 37
	'SWAP'         shift, and enter state 38
	'T'            shift, and enter state 39
	'TOFFOLI'      shift, and enter state 40
	'X'            shift, and enter state 41
	'Y'            shift, and enter state 42
	'Z'            shift, and enter state 43
	'if'           shift, and enter state 82
	'let'          shift, and enter state 83
	L_integ        shift, and enter state 20
	L_Var          shift, and enter state 54
	L_GateIdent    shift, and enter state 44
	L_Lambda       shift, and enter state 84

	Integer        goto state 68
	Var            goto state 70
	GateIdent      goto state 21
	Lambda         goto state 71
	Term3          goto state 72
	Term2          goto state 73
	Term1          goto state 92
	Tup            goto state 76
	Bit            goto state 78
	Gate           goto state 79

State 4

	%start_pTerm -> . Term                              (rule 4)

	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'CNOT'         shift, and enter state 23
	'CR2'          shift, and enter state 24
	'CR2D'         shift, and enter state 25
	'CR3'          shift, and enter state 26
	'CR4'          shift, and enter state 27
	'CR4D'         shift, and enter state 28
	'CR8'          shift, and enter state 29
	'CR8D'         shift, and enter state 30
	'CT'           shift, and enter state 31
	'FREDKIN'      shift, and enter state 32
	'H'            shift, and enter state 33
	'I'            shift, and enter state 34
	'QFT'          shift, and enter state 35
	'QFTI'         shift, and enter state 36
	'S'            shift, and enter state 37
	'SWAP'         shift, and enter state 38
	'T'            shift, and enter state 39
	'TOFFOLI'      shift, and enter state 40
	'X'            shift, and enter state 41
	'Y'            shift, and enter state 42
	'Z'            shift, and enter state 43
	'if'           shift, and enter state 82
	'let'          shift, and enter state 83
	L_integ        shift, and enter state 20
	L_Var          shift, and enter state 54
	L_GateIdent    shift, and enter state 44
	L_Lambda       shift, and enter state 84

	Integer        goto state 68
	Var            goto state 70
	GateIdent      goto state 21
	Lambda         goto state 71
	Term3          goto state 72
	Term2          goto state 73
	Term1          goto state 74
	Term           goto state 91
	Tup            goto state 76
	Bit            goto state 78
	Gate           goto state 79

State 5

	%start_pLetVar -> . LetVar                          (rule 5)

	L_Var          shift, and enter state 54

	Var            goto state 87
	LetVar         goto state 90

State 6

	%start_pListLetVar -> . ListLetVar                  (rule 6)

	L_Var          shift, and enter state 54

	Var            goto state 87
	LetVar         goto state 88
	ListLetVar     goto state 89

State 7

	%start_pTup -> . Tup                                (rule 7)

	'('            shift, and enter state 86

	Tup            goto state 85

State 8

	%start_pListTerm -> . ListTerm                      (rule 8)

	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'CNOT'         shift, and enter state 23
	'CR2'          shift, and enter state 24
	'CR2D'         shift, and enter state 25
	'CR3'          shift, and enter state 26
	'CR4'          shift, and enter state 27
	'CR4D'         shift, and enter state 28
	'CR8'          shift, and enter state 29
	'CR8D'         shift, and enter state 30
	'CT'           shift, and enter state 31
	'FREDKIN'      shift, and enter state 32
	'H'            shift, and enter state 33
	'I'            shift, and enter state 34
	'QFT'          shift, and enter state 35
	'QFTI'         shift, and enter state 36
	'S'            shift, and enter state 37
	'SWAP'         shift, and enter state 38
	'T'            shift, and enter state 39
	'TOFFOLI'      shift, and enter state 40
	'X'            shift, and enter state 41
	'Y'            shift, and enter state 42
	'Z'            shift, and enter state 43
	'if'           shift, and enter state 82
	'let'          shift, and enter state 83
	L_integ        shift, and enter state 20
	L_Var          shift, and enter state 54
	L_GateIdent    shift, and enter state 44
	L_Lambda       shift, and enter state 84

	Integer        goto state 68
	Var            goto state 70
	GateIdent      goto state 21
	Lambda         goto state 71
	Term3          goto state 72
	Term2          goto state 73
	Term1          goto state 74
	Term           goto state 75
	Tup            goto state 76
	ListTerm       goto state 77
	Bit            goto state 78
	Gate           goto state 79

State 9

	%start_pBit -> . Bit                                (rule 9)

	L_integ        shift, and enter state 20

	Integer        goto state 68
	Bit            goto state 69

State 10

	%start_pFunDec -> . FunDec                          (rule 10)

	L_FunVar       shift, and enter state 66

	FunVar         goto state 63
	FunDec         goto state 67

State 11

	%start_pListFunDec -> . ListFunDec                  (rule 11)

	L_FunVar       shift, and enter state 66
	%eof           reduce using rule 46

	FunVar         goto state 63
	FunDec         goto state 64
	ListFunDec     goto state 65

State 12

	%start_pFunction -> . Function                      (rule 12)

	L_Var          shift, and enter state 54

	Var            goto state 61
	Function       goto state 62

State 13

	%start_pArg -> . Arg                                (rule 13)

	L_Var          shift, and enter state 54

	Var            goto state 57
	Arg            goto state 60

State 14

	%start_pListArg -> . ListArg                        (rule 14)

	L_Var          shift, and enter state 54
	%eof           reduce using rule 50

	Var            goto state 57
	Arg            goto state 58
	ListArg        goto state 59

State 15

	%start_pType2 -> . Type2                            (rule 15)

	'!'            shift, and enter state 49
	'('            shift, and enter state 50
	'Bit'          shift, and enter state 51
	'QBit'         shift, and enter state 52
	'T'            shift, and enter state 53
	L_Var          shift, and enter state 54

	Var            goto state 45
	Type2          goto state 56

State 16

	%start_pType1 -> . Type1                            (rule 16)

	'!'            shift, and enter state 49
	'('            shift, and enter state 50
	'Bit'          shift, and enter state 51
	'QBit'         shift, and enter state 52
	'T'            shift, and enter state 53
	L_Var          shift, and enter state 54

	Var            goto state 45
	Type2          goto state 46
	Type1          goto state 55

State 17

	%start_pType -> . Type                              (rule 17)

	'!'            shift, and enter state 49
	'('            shift, and enter state 50
	'Bit'          shift, and enter state 51
	'QBit'         shift, and enter state 52
	'T'            shift, and enter state 53
	L_Var          shift, and enter state 54

	Var            goto state 45
	Type2          goto state 46
	Type1          goto state 47
	Type           goto state 48

State 18

	%start_pGate -> . Gate                              (rule 18)

	'CNOT'         shift, and enter state 23
	'CR2'          shift, and enter state 24
	'CR2D'         shift, and enter state 25
	'CR3'          shift, and enter state 26
	'CR4'          shift, and enter state 27
	'CR4D'         shift, and enter state 28
	'CR8'          shift, and enter state 29
	'CR8D'         shift, and enter state 30
	'CT'           shift, and enter state 31
	'FREDKIN'      shift, and enter state 32
	'H'            shift, and enter state 33
	'I'            shift, and enter state 34
	'QFT'          shift, and enter state 35
	'QFTI'         shift, and enter state 36
	'S'            shift, and enter state 37
	'SWAP'         shift, and enter state 38
	'T'            shift, and enter state 39
	'TOFFOLI'      shift, and enter state 40
	'X'            shift, and enter state 41
	'Y'            shift, and enter state 42
	'Z'            shift, and enter state 43
	L_GateIdent    shift, and enter state 44

	GateIdent      goto state 21
	Gate           goto state 22

State 19

	Integer -> . L_integ                                (rule 19)

	L_integ        shift, and enter state 20


State 20

	Integer -> L_integ .                                (rule 19)

	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	','            reduce using rule 19
	'CNOT'         reduce using rule 19
	'CR2'          reduce using rule 19
	'CR2D'         reduce using rule 19
	'CR3'          reduce using rule 19
	'CR4'          reduce using rule 19
	'CR4D'         reduce using rule 19
	'CR8'          reduce using rule 19
	'CR8D'         reduce using rule 19
	'CT'           reduce using rule 19
	'FREDKIN'      reduce using rule 19
	'H'            reduce using rule 19
	'I'            reduce using rule 19
	'QFT'          reduce using rule 19
	'QFTI'         reduce using rule 19
	'S'            reduce using rule 19
	'SWAP'         reduce using rule 19
	'T'            reduce using rule 19
	'TOFFOLI'      reduce using rule 19
	'X'            reduce using rule 19
	'Y'            reduce using rule 19
	'Z'            reduce using rule 19
	'else'         reduce using rule 19
	'in'           reduce using rule 19
	'then'         reduce using rule 19
	L_integ        reduce using rule 19
	L_FunVar       reduce using rule 19
	L_Var          reduce using rule 19
	L_GateIdent    reduce using rule 19
	%eof           reduce using rule 19


State 21

	Gate -> GateIdent .                                 (rule 84)

	'('            reduce using rule 84
	')'            reduce using rule 84
	'*'            reduce using rule 84
	','            reduce using rule 84
	'CNOT'         reduce using rule 84
	'CR2'          reduce using rule 84
	'CR2D'         reduce using rule 84
	'CR3'          reduce using rule 84
	'CR4'          reduce using rule 84
	'CR4D'         reduce using rule 84
	'CR8'          reduce using rule 84
	'CR8D'         reduce using rule 84
	'CT'           reduce using rule 84
	'FREDKIN'      reduce using rule 84
	'H'            reduce using rule 84
	'I'            reduce using rule 84
	'QFT'          reduce using rule 84
	'QFTI'         reduce using rule 84
	'S'            reduce using rule 84
	'SWAP'         reduce using rule 84
	'T'            reduce using rule 84
	'TOFFOLI'      reduce using rule 84
	'X'            reduce using rule 84
	'Y'            reduce using rule 84
	'Z'            reduce using rule 84
	'else'         reduce using rule 84
	'in'           reduce using rule 84
	'then'         reduce using rule 84
	L_integ        reduce using rule 84
	L_FunVar       reduce using rule 84
	L_Var          reduce using rule 84
	L_GateIdent    reduce using rule 84
	%eof           reduce using rule 84


State 22

	%start_pGate -> Gate .                              (rule 18)

	%eof           accept


State 23

	Gate -> 'CNOT' .                                    (rule 69)

	'('            reduce using rule 69
	')'            reduce using rule 69
	'*'            reduce using rule 69
	','            reduce using rule 69
	'CNOT'         reduce using rule 69
	'CR2'          reduce using rule 69
	'CR2D'         reduce using rule 69
	'CR3'          reduce using rule 69
	'CR4'          reduce using rule 69
	'CR4D'         reduce using rule 69
	'CR8'          reduce using rule 69
	'CR8D'         reduce using rule 69
	'CT'           reduce using rule 69
	'FREDKIN'      reduce using rule 69
	'H'            reduce using rule 69
	'I'            reduce using rule 69
	'QFT'          reduce using rule 69
	'QFTI'         reduce using rule 69
	'S'            reduce using rule 69
	'SWAP'         reduce using rule 69
	'T'            reduce using rule 69
	'TOFFOLI'      reduce using rule 69
	'X'            reduce using rule 69
	'Y'            reduce using rule 69
	'Z'            reduce using rule 69
	'else'         reduce using rule 69
	'in'           reduce using rule 69
	'then'         reduce using rule 69
	L_integ        reduce using rule 69
	L_FunVar       reduce using rule 69
	L_Var          reduce using rule 69
	L_GateIdent    reduce using rule 69
	%eof           reduce using rule 69


State 24

	Gate -> 'CR2' .                                     (rule 76)

	'('            reduce using rule 76
	')'            reduce using rule 76
	'*'            reduce using rule 76
	','            reduce using rule 76
	'CNOT'         reduce using rule 76
	'CR2'          reduce using rule 76
	'CR2D'         reduce using rule 76
	'CR3'          reduce using rule 76
	'CR4'          reduce using rule 76
	'CR4D'         reduce using rule 76
	'CR8'          reduce using rule 76
	'CR8D'         reduce using rule 76
	'CT'           reduce using rule 76
	'FREDKIN'      reduce using rule 76
	'H'            reduce using rule 76
	'I'            reduce using rule 76
	'QFT'          reduce using rule 76
	'QFTI'         reduce using rule 76
	'S'            reduce using rule 76
	'SWAP'         reduce using rule 76
	'T'            reduce using rule 76
	'TOFFOLI'      reduce using rule 76
	'X'            reduce using rule 76
	'Y'            reduce using rule 76
	'Z'            reduce using rule 76
	'else'         reduce using rule 76
	'in'           reduce using rule 76
	'then'         reduce using rule 76
	L_integ        reduce using rule 76
	L_FunVar       reduce using rule 76
	L_Var          reduce using rule 76
	L_GateIdent    reduce using rule 76
	%eof           reduce using rule 76


State 25

	Gate -> 'CR2D' .                                    (rule 77)

	'('            reduce using rule 77
	')'            reduce using rule 77
	'*'            reduce using rule 77
	','            reduce using rule 77
	'CNOT'         reduce using rule 77
	'CR2'          reduce using rule 77
	'CR2D'         reduce using rule 77
	'CR3'          reduce using rule 77
	'CR4'          reduce using rule 77
	'CR4D'         reduce using rule 77
	'CR8'          reduce using rule 77
	'CR8D'         reduce using rule 77
	'CT'           reduce using rule 77
	'FREDKIN'      reduce using rule 77
	'H'            reduce using rule 77
	'I'            reduce using rule 77
	'QFT'          reduce using rule 77
	'QFTI'         reduce using rule 77
	'S'            reduce using rule 77
	'SWAP'         reduce using rule 77
	'T'            reduce using rule 77
	'TOFFOLI'      reduce using rule 77
	'X'            reduce using rule 77
	'Y'            reduce using rule 77
	'Z'            reduce using rule 77
	'else'         reduce using rule 77
	'in'           reduce using rule 77
	'then'         reduce using rule 77
	L_integ        reduce using rule 77
	L_FunVar       reduce using rule 77
	L_Var          reduce using rule 77
	L_GateIdent    reduce using rule 77
	%eof           reduce using rule 77


State 26

	Gate -> 'CR3' .                                     (rule 78)
	Gate -> 'CR3' .                                     (rule 79)

	'('            reduce using rule 79
			(reduce using rule 78)

	')'            reduce using rule 79
			(reduce using rule 78)

	'*'            reduce using rule 79
			(reduce using rule 78)

	','            reduce using rule 79
			(reduce using rule 78)

	'CNOT'         reduce using rule 79
			(reduce using rule 78)

	'CR2'          reduce using rule 79
			(reduce using rule 78)

	'CR2D'         reduce using rule 79
			(reduce using rule 78)

	'CR3'          reduce using rule 79
			(reduce using rule 78)

	'CR4'          reduce using rule 79
			(reduce using rule 78)

	'CR4D'         reduce using rule 79
			(reduce using rule 78)

	'CR8'          reduce using rule 79
			(reduce using rule 78)

	'CR8D'         reduce using rule 79
			(reduce using rule 78)

	'CT'           reduce using rule 79
			(reduce using rule 78)

	'FREDKIN'      reduce using rule 79
			(reduce using rule 78)

	'H'            reduce using rule 79
			(reduce using rule 78)

	'I'            reduce using rule 79
			(reduce using rule 78)
